--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upright-fearful-mallard",
+  "name": "milky-thunderous-human",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
